# Copperspice-examples

./: .gitignore  LICENSE  README.md
HelloLunch/: CMakeLists.txt
HelloLunch/src/: CMakeLists.txt
voidrealms/: out_of_src_bld.bat
voidrealms/Qt-24/: conanfile.py
voidrealms/qt-103/: CMakelists.txt  Conan_CMakelists.txt  ExampleError.pro  NoPkg_CMakelists.txt  conan_out_of_src_bld.bat  conanfile.txt  main.cpp  myerror.cpp  myerror.h  nopkg_out_of_src_bld.bat  out_of_src_bld.bat
